[DevTools] Better ExceptionDetails in js_protocol.json

- line/column -> lineNumber/columnNumber
- lineNumber is 0-based
- ExceptionDetails is hidden
- fixed +/-1 error

R=dgozman@chromium.org
BUG=591496

Review-Url: https://codereview.chromium.org/2130203002
Cr-Original-Commit-Position: refs/heads/master@{#404564}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: 6667812b2dffe3f6bf794b2b040504e5a3ad7cb7